# pose_estimation

./: README.md  pose_estimation.repos
chessboard_pose_estimator/: CMakeLists.txt  package.xml
chessboard_pose_estimator/include/: chessboard_pose_estimator.h
chessboard_pose_estimator/src/: chessboard_pose_estimator.cpp  test_script.cpp
object_pose_estimator/: CMakeLists.txt  package.xml
object_pose_estimator/include/: object_pose_estimator.hpp  pose_listener.hpp
object_pose_estimator/src/: object_pose_estimator.cpp  object_pose_test.cpp  pose_listener.cpp
pose_estimation/: CMakeLists.txt  FindHalcon.cmake  package.xml
pose_estimation/include/: chessboard_pose_estimator.hpp  halcon_surface_match.hpp  opencv_surface_match.hpp  pose_estimation.hpp
pose_estimation/launch/: pose_estimation.launch.py
pose_estimation/src/: chessboard_pose_estimator.cpp  halcon_surface_match.cpp  opencv_surface_match.cpp  pose_estimation.cpp  test_script.cpp
pose_estimation_interface/: CMakeLists.txt  package.xml
pose_estimation_interface/srv/: EstimatePose.srv  InitCvSurfaceMatch.srv  InitSurfaceMatch.srv
pose_estimation_manager/: CMakeLists.txt  package.xml
pose_estimation_manager/include/: pose_estimation_manager.hpp  pose_transformer.hpp
pose_estimation_manager/src/: pose_estimation_manager.cpp  pose_transformer.cpp
