<?xml version="1.0"?>
<package format="3">
  <name>pose_estimation</name>
  <version>1.0.0</version>
  <description>Pose estimation</description>
  <maintainer email="markubjo@stud.ntnu.no">Markus Bjønnes</maintainer>

  <license>Apache License 2.0</license>
  <author email="markubjo@stud.ntnu.no">Markus Bjønnes</author>
  

  <buildtool_depend>ament_cmake</buildtool_depend>

  
  <depend>Zivid</depend>
  <depend>OpenCV</depend>
  <depend>xtensor</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  <depend>pose_estimation_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
