<?xml version="1.0"?>
<package format="3">
  <name>pose_estimation_interface</name>
  <version>0.0.0</version>
  <description>Pose_estimation interface definitions.</description>
  <maintainer email="markubjo@stud.ntnu.no">Markus Bjonnes</maintainer>
  <license>BSD3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>